@@ -9,7 +9,8 @@ We’ve added:
 - Support for ruby 3.2
 - Standardized code with rubocop
 - Added support for SCP transfers — On some conditions with servers with higher latency, transfering large files (> 18GB) with SFTP can take a very long time.
-- Remove svndump feature
+- Removed svndump feature
+- Removed FTP transfer feature
 
 ## Installation
 
